Add blastoff v2.5 kernel by bhundven
Signed-off-by: Fernando Barillas <fbis251@gmail.com>

--- a/system/etc/wifi/wifi.conf
+++ b/system/etc/wifi/wifi.conf
@@ -4,12 +4,12 @@ SUPPLICANT_NAME=wpa_supplicant
 SUPP_PROP_NAME=init.svc.wpa_supplicant
 MODULE_FILE=/proc/modules
 IFACE_DIR=
-DRIVER_MODULE_NAME=dhd
-DRIVER_MODULE_TAG=dhd 
+DRIVER_MODULE_NAME=bcm4329
+DRIVER_MODULE_TAG=bcm4329
 FIRMWARE_LOADER=
 SUPP_CONFIG_TEMPLATE=/system/etc/wifi/wpa_supplicant.conf
 SUPP_CONFIG_FILE=/data/wifi/bcm_supp.conf
-DRIVER_MODULE_PATH=/lib/modules/dhd.ko
+DRIVER_MODULE_PATH=/lib/modules/bcm4329.ko
 MFGDRV_MODULE_ARG=firmware_path=/system/etc/wifi/bcm4329_mfg.bin nvram_path=/system/etc/wifi/nvram_mfg.txt
 DRV_AP_MODULE_ARG=firmware_path=/system/etc/wifi/bcm4329_aps.bin nvram_path=/system/etc/wifi/nvram_net.txt
 DRIVER_MODULE_ARG=firmware_path=/system/etc/wifi/bcm4329_sta.bin nvram_path=/system/etc/wifi/nvram_net.txt
